tests/parser-test-files/bad-files/parse-declare.3.error
error: Malformed declaration
  --> test:4:20
   |
 4 |  (declare x (T -> T) z)
   |                      ^ unexpected trailing form
