tests/parser-test-files/bad-files/parse-declare.3.coal
;; BAD: Parse Declare
(package test-package)

(declare x (T -> T) z)
